Shared Preflerle kullanıcı adı ve şifre korunması sağlandı. Uygulama görüntüsü düzenlendi, constraint layout'a geçildi, tc kimlik numarası sorgulama eklendi. Kullanıcıların username ve password girdikten sonra tekrar girmeyi denemesi sağlandı.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ODTÜ-Pass</string>
+    <string name="girisViewDefault">Giris Yapılmadı, Uzun Sürerse Kullanıcı Adı ve Şifrenizi Güncelleyip Tekrar Deneyin</string>
+    <string name="TCViewDefault">TC Kimlik Numarası</string>
 </resources>
